# demo-acme-helpdesk-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
src/acme_helpdesk/: __init__.py  __main__.py  auth.py  config.py  db.py  server.py
